--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       text-align: center;
       font-size: 1.2rem;
     }
-    .buttons, .input-area, .levels {
+    .controls {
       margin: 1rem;
     }
     button {
@@ -34,16 +34,10 @@
       border-radius: 6px;
       cursor: pointer;
     }
-    input {
+    input, select {
       padding: 0.4rem;
       font-size: 1rem;
-      width: 80px;
-      text-align: center;
-    }
-    #score {
-      font-size: 1.2rem;
-      font-weight: bold;
-      margin-top: 1rem;
+      margin: 0.3rem;
     }
     #stappen {
       margin-top: 2rem;
@@ -64,7 +58,7 @@
   <h1>Bordjesmethode Oefenen</h1>
   <p>Maak de vergelijking stap voor stap af.</p>
 
-  <div class="levels">
+  <div class="controls">
     <label>Kies niveau:
       <select id="level" onchange="newEquation()">
         <option value="easy">Makkelijk</option>
@@ -76,26 +70,26 @@
 
   <div id="bordjes" class="bordjes"></div>
 
-  <div class="input-area">
-    <label>Vul getal in: <input type="number" id="userNumber"></label>
-  </div>
-
-  <div class="buttons">
-    <button onclick="doMinus()">- getal</button>
-    <button onclick="doDivide()">÷ getal</button>
+  <div class="controls">
+    <select id="bewerking">
+      <option value="+">+</option>
+      <option value="-">-</option>
+      <option value="*">×</option>
+      <option value="/">÷</option>
+    </select>
+    <input type="number" id="userNumber" placeholder="getal">
+    <button onclick="doStep()">Voer stap uit</button>
     <button onclick="reset()">Nieuwe som</button>
   </div>
 
   <p id="feedback"></p>
-  <p id="score">Score: 0</p>
 
   <h2>Stappen</h2>
   <div id="stappen"></div>
 
   <script>
     let a, b, x, c;
-    let step = 0;
-    let score = 0;
+    let huidigeVergelijking;
 
     function newEquation() {
       const level = document.getElementById("level").value;
@@ -103,16 +97,16 @@
         a = Math.floor(Math.random() * 5) + 1;
         x = Math.floor(Math.random() * 9) + 1;
         b = Math.floor(Math.random() * 10);
-      } else if (level === "medium" || level === "hard") {
+      } else {
         a = Math.floor(Math.random() * 9) + 2;
         x = Math.floor(Math.random() * 21) - 10;
         b = Math.floor(Math.random() * 21) - 10;
       }
       c = a * x + b;
-      step = 0;
+      huidigeVergelijking = [a, "x", b >= 0 ? "+" : "-", Math.abs(b), "=", c];
       document.getElementById("stappen").innerHTML = "";
-      showBordjes([a, 'x', b >= 0 ? '+' : '-', Math.abs(b), '=', c]);
-      addStap([a, 'x', b >= 0 ? '+' : '-', Math.abs(b), '=', c]);
+      showBordjes(huidigeVergelijking);
+      addStap(huidigeVergelijking);
       document.getElementById("feedback").innerText = "";
       document.getElementById("userNumber").value = "";
     }
@@ -136,46 +130,33 @@
       stappen.appendChild(div);
     }
 
-    function doMinus() {
+    function doStep() {
+      const operatie = document.getElementById("bewerking").value;
       const num = parseInt(document.getElementById("userNumber").value);
-      if (step === 0) {
-        if (num === b) {
-          showBordjes([a, 'x', '=', c - b]);
-          addStap([a, 'x', '=', c - b]);
-          document.getElementById("feedback").innerText = "Goed! Je hebt " + num + " van beide kanten afgehaald.";
-          score += 10;
-          step++;
-        } else {
-          document.getElementById("feedback").innerText = "Probeer het opnieuw: welk getal moet je weghalen?";
-          score -= 2;
-        }
-      } else {
-        document.getElementById("feedback").innerText = "Deze stap kan nu niet.";
+      if (isNaN(num)) {
+        document.getElementById("feedback").innerText = "Vul een getal in.";
+        return;
       }
-      updateScore();
-    }
 
-    function doDivide() {
-      const num = parseInt(document.getElementById("userNumber").value);
-      if (step === 1) {
-        if (num === a) {
-          showBordjes(['x', '=', (c - b) / a]);
-          addStap(['x', '=', (c - b) / a]);
-          document.getElementById("feedback").innerText = "✅ Oplossing gevonden: x = " + ((c - b) / a);
-          score += 20;
-          step++;
-        } else {
-          document.getElementById("feedback").innerText = "Probeer het opnieuw: door welk getal moet je delen?";
-          score -= 2;
-        }
-      } else {
-        document.getElementById("feedback").innerText = "Deze stap kan nu niet.";
+      let links, rechts;
+      try {
+        // Links (voor het = teken) en rechts (na het = teken) apart verwerken
+        const eqIndex = huidigeVergelijking.indexOf("=");
+        links = huidigeVergelijking.slice(0, eqIndex).join(" ");
+        rechts = huidigeVergelijking.slice(eqIndex + 1).join(" ");
+
+        // Evalueer links en rechts als expressies (beperk tot eenvoudige eval)
+        let nieuweLinks = "(" + links + ") " + operatie + " (" + num + ")";
+        let nieuweRechts = "(" + rechts + ") " + operatie + " (" + num + ")";
+
+        huidigeVergelijking = [nieuweLinks, "=", nieuweRechts];
+
+        showBordjes(huidigeVergelijking);
+        addStap(huidigeVergelijking);
+        document.getElementById("feedback").innerText = "Stap uitgevoerd.";
+      } catch (e) {
+        document.getElementById("feedback").innerText = "Ongeldige stap.";
       }
-      updateScore();
-    }
-
-    function updateScore() {
-      document.getElementById("score").innerText = "Score: " + score;
     }
 
     function reset() {
